# variable-statistics-figures

./: nlp_statistics_for_seshat_info.json  nlp_statistics_for_seshatdatabank.json  plots.ipynb  pyproject.toml
